--- a/overrides/home.html
+++ b/overrides/home.html
@@ -4,251 +4,320 @@
 {% block tabs %}
 {{ super() }}
 <style>
-
-    .md-main {
-        flex-grow: 0
+    *{
+        margin:0;
+        padding:0;
+        box-sizing: border-box;
     }
 
-    .card-link {
-      display: block;
-      text-decoration: none;
-      color: inherit;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      padding: 20px;
-      background-color: #fff;
-      max-width: 400px;
-      margin: 0 auto;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-      transition: box-shadow 0.3s ease, transform 0.2s ease;
-    }
-
-    .card-link:hover {
-      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
-      transform: translateY(-3px);
-    }
-
-    .card-content h2 {
+    body{
+        font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        line-height: 1.6;
         color: #333;
-        font-weight: 300;
-        font-size: 25px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        line-height: normal;
-        margin-top: 20px;
-        margin-bottom: 10px;
-        font-family: inherit;
+        overflow-x: hidden;
     }
 
-    .card-content p {
-      margin: 0.5rem 0 0;
-      color: #555;
-    }
-
-    .md-main__inner {
-        display: flex;
-        height: 100%;
-    }
-
-    .tx-container {
-        padding-top: .0rem;
-        background: linear-gradient(to bottom, var(--md-primary-fg-color), rgb(171, 248, 225) 75%,#fff 99%)
-    }
-
-    .tx-hero {
-        margin: 32px 2.8rem;
-        color: var(--md-primary-bg-color);
-        justify-content: center;
-    }
-
-    .tx-hero h1 {
-        margin-bottom: 1rem;
-        color: currentColor;
-        font-weight: 700
-    }
-
-    .tx-hero__content {
-        padding-bottom: 1rem;
-        margin: 0 auto;
-    }
-
-    .tx-hero__image{
-        width:17rem;
-        height:17rem;
-        order:1;
-        padding-right: 2.5rem;
-    }
-
-    .tx-hero .md-button {
-        margin-top: .5rem;
-        margin-right: .5rem;
-        color: var(--md-primary-bg-color)
-    }
-
-    .tx-hero .md-button--primary {
-        background-color: var(--md-primary-bg-color);
-        color: hsla(280deg, 37%, 48%, 1);
-        border-color: var(--md-primary-bg-color)
-    }
-
-    .tx-hero .md-button:focus,
-    .tx-hero .md-button:hover {
-        background-color: var(--md-accent-fg-color);
-        color: var(--md-default-bg-color);
-        border-color: var(--md-accent-fg-color)
-    }
-
-    .top-hr {
-        margin-top: 42px;
-    }
-
-    @media screen and (max-width:30em) {
-        .tx-hero h1 {
-            font-size: 1.4rem
-        }
-    }
-
-    @media screen and (min-width:60em) {
-        .md-sidebar--secondary {
-            display: none
-        }
-
-        .tx-hero {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .tx-hero__content {
-            max-width: 22rem;
-            margin-top: 3.5rem;
-            margin-bottom: 3.5rem;
-            margin-left: 1.0rem;
-            margin-right: 4.0rem;
-            align-items: center;
-        }
-    }
-
-    @media screen and (min-width:76.25em) {
-        .md-sidebar--primary {
-            display: none
-        }
-
-        .top-hr {
-            width: 100%;
-            display: flex;
-            max-width: 61rem;
-            margin-right: auto;
-            margin-left: auto;
-            padding: 0 .2rem;
-        }
-
-        .bottom-hr {
-            margin-top: 10px;
-            width: 100%;
-            display: flex;
-            max-width: 61rem;
-            margin-right: auto;
-            margin-left: auto;
-            padding: 0 .2rem;
-        }
-    }
-
-    .hr {
-        border-bottom: 1px solid #eee;
+    .bg-animation{
+        position: fixed;
+        top: 0;
+        left: 0;
         width: 100%;
-        margin: 20px 0;
+        height: 100%;
+        z-index: -1;
+        background: linear-gradient(135deg,#667eea, 0%, #764ba2 100%);
+        overflow: hidden;
     }
 
-    .text-center {
-        text-align: center;
-        padding-right: 15px;
-        padding-left: 15px;
-        margin-right: auto;
-        margin-left: auto;
-        margin-top: 15px;
-        font-family: 'Lato', sans-serif;
-        font-size: 23px;
-        font-weight: 300;
-        padding-bottom: 10px;
+    .bg-animation::before{
+        content: '';
+        position: absolute;
+        top: -50%;
+        left: -50%;
+        width: 200%;
+        height: 200%;
+        background: radial-gradient(circle,rgba(255,255,255,0.1) 1px, transparent,1px);
+        background-size: 50px 50px;
+        animation: float 20s infinite linear;
     }
 
-    .logos {
+    @keyframes float {
+        0% {transform: translate(0,0) rotate(0deg);}
+        100% {transform: translate(-50px, -50px) rotate(360deg);}
+    }
+
+    .hero {
+        min-height: 100vh;
         display: flex;
         align-items: center;
         justify-content: center;
-        flex-flow: row wrap;
+        position: relative;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #a8e6cf 100%);
+    }
+
+    .hero-content{
+        display: flex;
+        align-items: center;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 2rem;
+        gap: 4rem;
+        z-index: 2;
+        position: relative;
+    }
+
+    .hero-text{
+        flex:1;
+        color: white;
+    }
+
+    .hero-text h1{
+        font-size: clamp(3rem, 8vw, 6rem);
+        font-weight: 700;
+        margin-bottom: 1.5rem;
+        letter-spacing: -0.02rem;
+        /* background: linear-gradient(135deg, #fff 0%, #f0f9ff 100%); */
+    }
+
+    .hero-text p{
+        font-size: 1.25rem;
+        margin-bottom: 2rem;
+        opacity: 0.9;
+        max-width: 500px;
+        line-height: 1.7;
+    }
+
+    cta-button{
+        display: inline-flex;
+        align-items: center;
+        gap: 0.5rem;
+        padding: 1rem 2rem;
+        background: rgba(255,255,255,0.15);
+        color: white;
+        text-decoration: none;
+        border-radius: 50px;
+        font-weight: 600;
+        font-size: 1.1rem;
+        backdrop-filter: blur(10px);
+        border: 1px solid rgba(255,255,255,0.2);
+        transition: all 0.3 ease;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .cta-button::before{
+        content: '';
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
+        transition: left 0.5s;
+    }
+
+    .cta-button:hover::before{
+        left: 100%;
+    }
+
+    .cta-button:hover{
+        transform: translateY(-2px);
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+        background: rgba(255, 255, 255, 0.25);
+    }
+
+    .hero-image{
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .floating-card{
+        width: 300px;
+        height: 300px;
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(20px);
+        border-radius: 1px solid rgba(255,255,255,0.2);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 4rem;
+        color: white;
+        animation: floatUp 3s ease-in-out infinite alternate;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .floating-card::before{
+        content: '';
+        position: absolute;
+        top: -50%;
+        left: -50%;
+        width: 200%;
+        height: 200%;
+        background: radial-gradient(circle,rgba(255,255,255,0.1) 1px, transparent,1px);
+        animation: rotate 4s linear infinite;
+    }
+
+    @keyframes floatUp {
+        0% { transform: translateY(0px) rotate(0deg)}
+        100% {transform: translateY(-20px) rotate(5deg);}
+    }
+
+    @keyframes rotate  {
+        0% {transform: rotate(0deg)}
+        100% {transform: rotate(360deg);}
+    }
+
+    .cards-section{
+        padding: 6rem 2rem;
+        background: linear-gradient(to bottom, rgba(255,255,255,0.1), rgba(255,255,255,0.9));
+        backdrop-filter: blue(10px);
+    }
+
+    .cards-container{
+        max-width: 1200px;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+        gap: 2rem;
+        padding-top: 2rem;
+    }
+
+    .feature-card{
+        background: rgba(255,255,255,0.95);
+        backdrop-filter: blur(20px);
+        border-radius: 20px;
+        padding: 2.5rem;
+        border: 1px solid rgba(255,255,255,0.3);
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+        transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        position: relative;
+        overflow: hidden;
+        text-decoration: none;
+        color: inherit;
+    }
+
+    .feature-card::before{
+        content: '';
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        background: linear-gradient(90deg, transparent, rgba(102, 126, 234,0.1), transparent);
+        transition: left 0.6s ease;
+    }
+
+    .feature-card:hover::before{
+        left: 100%;
+    }
+
+    .feature-card:hover{
+        transform: translateY(-10px) scale(1.02);
+        box-shadow: 0 20px 60px rgba(102, 126, 234,0.2);
+        border-color: rgba(102, 126, 234,0.3);
+    }
+
+    .card-icon{
+        width: 60px;
+        height: 60px;
+        background: linear-gradient(135deg, #667eea, #764ba2);
+        border-radius: 15px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.5rem;
+        color: white;
+        margin-bottom: 1.5rem;
+        position: relative;
+        z-index: 2;
+    }
+    
+    .feature-card h2{
+        font-size: 1.5rem;
+        font-weight: 600;
+        margin-bottom: 1rem;
+        color: #2d3748;
+        position: relative;
+        z-index: 2;
+    }
+
+    .feature-card p{
+        color: #718096;
+        line-height: 1.2;
+        position: relative;
+        z-index: 2;
+    }
+
+    .section-title{
+        text-align: center;
+        font-size: 2.5rem;
+        font-weight: 700;
+        color: #2d3748;
+        margin-bottom: 0 auto;
+    }
+
+    .section-subtitle{
+        text-align: center;
+        font-size: 1.25rem;
+        color: #718096;
+        max-width: 600px;
         margin: 0 auto;
     }
 
-    .logos img {
-        flex: 1 1 auto;
-        padding: 25px;
-        max-height: 130px;
-        vertical-align: middle;
-    }
-
-    .hr-logos {
-        margin-top: 0;
-        margin-bottom: 30px;
-    }
-
-    .md-footer-meta__inner {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        margin-top: 1.0rem;
-    }
-
-    .md-footer-social {
-        padding-top: 20px;
+    .fade-in{
+        opacity: 1;
+        transform: translateY(0);
+        transition: all 0.6s ease;
     }
 </style>
 
-<!-- Main site Entry button descriptions -->
-<section class="tx-container">
-    <div class="md-grid md-typeset">
-      <div class="tx-hero">
-        <div class="tx-hero__image">
-          <img src="assets/product-layers.png" draggable="false">
+<div class="bg-animation"></div>
+<section class="hero">
+    <div class="hero-content">
+        <div class="hero-text">
+            <h1>ATLAS</h1>
+            <p> Unlock the power of advanced data processing with our comprehensive platform designed to suite all of your analytical needs and scale with your business.</p>
+            <a href="getting-started/introduction" class="cta-button"><span>Get Started</span><span style="font-size: 1.2rem;">→</span></a>
         </div>
-        <div class="tx-hero__content">
-          <h1>ATLAS</h1>
-          <p>Learn more about how to use and extend ATLAS to suite all of your data processing needs.</p>
-          <a href="{{ page.next_page.url | url }}" title="{{ page.next_page.title | striptags }}" class="md-button md-button--primary">
-            Get started
-          </a>
+        <div class="hero-image">
+            <div class="floating-card">
+                <span style="position: relative; z-index: 3;"><img src="assets/swoosh/hpc.png"/></span>
+            </div>
         </div>
-      </div>
     </div>
 </section>
-
-<!-- Main site box descriptions -->
-<div class="top-hr">
-
-<a href="https://example.com" class="card-link">
-    <div class="card-content">
-        <h2>Get Started with ATLAS</h2>
-        <p>Explore the platform and learn how to make the most of its features.</p>
+<section class="cards-section">
+    <div class="fade-in">
+        <h2 class="section-title">Everything your need</h2>
+        <p class="section-subtitle">Discover tools and resources to accelerate your data processing journey.</p>
     </div>
-</a>
+    <div class="cards-container">
+        <a href="getting-started/introduction" class="feature-card fade-in">
+            <div class="card-icon">🚀</div>
+            <h2>
+                Get Started with ATLAS
+            </h2>
+            <p>Jump right in with our getting started guide. Learn about the fundamentals and get your first workbook up and running in minutes.</p>
+        </a>
 
-<a href="https://example.com" class="card-link">
-    <div class="card-content">
-        <h2>Explore Developer Resources</h2>
-        <p>Explore the platform and learn how to make the most of its features.</p>
+        <a href="developer-resources/" class="feature-card fade-in">
+            <div class="card-icon">🚀</div>
+            <h2>
+                Developer Resources
+            </h2>
+            <p>Jump right in with our getting started guide. Learn about the fundamentals and get your first workbook up and running in minutes.</p>
+        </a>
+
+        <a href="extending-atlas/" class="feature-card fade-in">
+            <div class="card-icon">🚀</div>
+            <h2>
+                Extend ATLAS
+            </h2>
+            <p>Jump right in with our getting started guide. Learn about the fundamentals and get your first workbook up and running in minutes.</p>
+        </a>
     </div>
-</a>
-
-<a href="https://example.com" class="card-link">
-    <div class="card-content">
-        <h2>Expand your ATLAS setup</h2>
-        <p>Explore the platform and learn how to make the most of its features.</p>
-    </div>
-</a>
-</div>
-
+</section>
 
 {% endblock %}
 {% block content %}{% endblock %}
