--- a/overrides/home.html
+++ b/overrides/home.html
@@ -4,177 +4,144 @@
 {% block tabs %}
 {{ super() }}
 <style>
+    :root {
+        --primary: #ED6D20;
+        --primary-text: #303437;
+        --secondary-text: #B1B3B3;
+        --secondary: #148E8E;
+        --accent: #8FE5A6;
+    }
     *{
         margin:0;
         padding:0;
         box-sizing: border-box;
     }
-
     body{
         font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         line-height: 1.6;
-        color: #333;
+        color: var(--primary-text);
+        background: #fff;
         overflow-x: hidden;
     }
-
-    .bg-animation{
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        background: linear-gradient(135deg,#667eea, 0%, #764ba2 100%);
-        overflow: hidden;
+    /* Remove gradients and background animation for accessibility */
+    .bg-animation { display: none; }
+    .hero {
+        min-height: 90vh;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        position: relative;
+        background: url('assets/swoosh/media_Banners_FINAL.jpg') center center/cover no-repeat;
+        border-bottom: 1px solid #eee;
     }
-
-    .bg-animation::before{
+    .hero::after {
         content: '';
         position: absolute;
-        top: -50%;
-        left: -50%;
-        width: 200%;
-        height: 200%;
-        background: radial-gradient(circle,rgba(255,255,255,0.1) 1px, transparent,1px);
-        background-size: 50px 50px;
-        animation: float 20s infinite linear;
+        top: 0; left: 0; right: 0; bottom: 0;
+        /* background: rgba(255,255,255,0.82); white overlay for clarity */
+        z-index: 1;
     }
-
-    @keyframes float {
-        0% {transform: translate(0,0) rotate(0deg);}
-        100% {transform: translate(-50px, -50px) rotate(360deg);}
-    }
-
-    .hero {
-        min-height: 100vh;
+    .hero-content {
         display: flex;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #a8e6cf 100%);
-    }
-
-    .hero-content{
-        display: flex;
-        align-items: center;
+        align-items:flex-end;
+        justify-content: flex-end;
+        width: 100%;
         max-width: 1200px;
-        margin: 0 auto;
-        padding: 2rem;
-        gap: 4rem;
+        margin: 0 2rem;
+        /* padding: 2rem; */
         z-index: 2;
         position: relative;
     }
-
-    .hero-text{
-        flex:1;
-        color: white;
+    .hero-card {
+        background: rgba(255,255,255,0.5);
+        backdrop-filter: blur(70px);
+        border-radius: 18px;
+        box-shadow: 0 4px 32px rgba(20,142,142,0.10);
+        padding: 2.5rem 2.5rem 2rem 2.5rem;
+        max-width: 40vw;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 1.2rem;
+        border: 1px solid rgba(255,255,255,0.4);
     }
-
-    .hero-text h1{
-        font-size: clamp(3rem, 8vw, 6rem);
-        font-weight: 700;
-        margin-bottom: 1.5rem;
+    .hero-card h1 {
+        font-size: clamp(2.5rem, 6vw, 4rem);
+        font-weight: 800;
+        color: var(--primary);
+        margin-bottom: 0.5rem;
         letter-spacing: -0.02rem;
-        /* background: linear-gradient(135deg, #fff 0%, #f0f9ff 100%); */
     }
-
-    .hero-text p{
-        font-size: 1.25rem;
-        margin-bottom: 2rem;
-        opacity: 0.9;
-        max-width: 500px;
-        line-height: 1.7;
+    .hero-card p {
+        font-size: 1.2rem;
+        color: var(--primary-text);
+        margin-bottom: 1.2rem;
+        line-height: 1.6;
     }
-
-    cta-button{
+    .cta-button {
+        position: relative;
+        background: none;
+        color: var(--primary);
+        font-weight: 700;
+        font-size: 1.1rem;
+        border: none;
+        border-radius: 0;
+        box-shadow: none;
+        text-decoration: none;
+        margin-top: 0.5rem;
+        cursor: pointer;
+        transition: color 0.2s;
         display: inline-flex;
         align-items: center;
         gap: 0.5rem;
-        padding: 1rem 2rem;
-        background: rgba(255,255,255,0.15);
-        color: white;
-        text-decoration: none;
-        border-radius: 50px;
-        font-weight: 600;
-        font-size: 1.1rem;
-        backdrop-filter: blur(10px);
-        border: 1px solid rgba(255,255,255,0.2);
-        transition: all 0.3 ease;
-        position: relative;
         overflow: hidden;
     }
-
-    .cta-button::before{
+    .cta-button::after {
         content: '';
         position: absolute;
-        top: 0;
-        left: -100%;
+        left: 0;
+        bottom: 0.3em;
+        width: 0;
+        height: 2px;
+        transition: width 0.3s cubic-bezier(0.4,0,0.2,1);
+    }
+    .cta-button:hover,
+    .cta-button:focus {
+        color: var(--secondary);
+        outline: none;
+    }
+    .cta-button:hover::after,
+    .cta-button:focus::after {
         width: 100%;
-        height: 100%;
-        background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
-        transition: left 0.5s;
     }
 
-    .cta-button:hover::before{
-        left: 100%;
+    .cta-button:hover, .cta-button:focus {
+        transform: translateY(-2px) scale(1.03);
+        outline: none;
     }
-
-    .cta-button:hover{
-        transform: translateY(-2px);
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-        background: rgba(255, 255, 255, 0.25);
-    }
-
     .hero-image{
         flex: 1;
         display: flex;
         justify-content: center;
         align-items: center;
+        min-width: 320px;
     }
-
-    .floating-card{
-        width: 300px;
-        height: 300px;
-        background: rgba(255, 255, 255, 0.1);
-        backdrop-filter: blur(20px);
-        border-radius: 1px solid rgba(255,255,255,0.2);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 4rem;
-        color: white;
-        animation: floatUp 3s ease-in-out infinite alternate;
-        position: relative;
-        overflow: hidden;
+    .hero-image img{
+        max-width: 420px;
+        width: 100%;
+        height: auto;
+        border-radius: 18px;
+        box-shadow: 0 4px 32px rgba(20,142,142,0.08);
+        border: 1px solid #eee;
+        background: #fff;
+        display: block;
     }
-
-    .floating-card::before{
-        content: '';
-        position: absolute;
-        top: -50%;
-        left: -50%;
-        width: 200%;
-        height: 200%;
-        background: radial-gradient(circle,rgba(255,255,255,0.1) 1px, transparent,1px);
-        animation: rotate 4s linear infinite;
-    }
-
-    @keyframes floatUp {
-        0% { transform: translateY(0px) rotate(0deg)}
-        100% {transform: translateY(-20px) rotate(5deg);}
-    }
-
-    @keyframes rotate  {
-        0% {transform: rotate(0deg)}
-        100% {transform: rotate(360deg);}
-    }
-
     .cards-section{
         padding: 6rem 2rem;
-        background: linear-gradient(to bottom, rgba(255,255,255,0.1), rgba(255,255,255,0.9));
-        backdrop-filter: blue(10px);
+        background: linear-gradient(to bottom, rgba(143,229,166,0.08), rgba(255,255,255,0.98));
+        backdrop-filter: blur(10px);
     }
-
     .cards-container{
         max-width: 1200px;
         margin: 0 auto;
@@ -183,113 +150,110 @@
         gap: 2rem;
         padding-top: 2rem;
     }
-
     .feature-card{
-        background: rgba(255,255,255,0.95);
+        background: #fff;
         backdrop-filter: blur(20px);
         border-radius: 20px;
         padding: 2.5rem;
-        border: 1px solid rgba(255,255,255,0.3);
-        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-        transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        border: 1.5px solid var(--accent);
+        box-shadow: 0 8px 32px rgba(20,142,142,0.08);
+        transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         position: relative;
         overflow: hidden;
         text-decoration: none;
-        color: inherit;
+        color: var(--primary-text);
     }
-
     .feature-card::before{
         content: '';
         position: absolute;
         top: 0;
         left: -100%;
         width: 100%;
-        background: linear-gradient(90deg, transparent, rgba(102, 126, 234,0.1), transparent);
+        height: 100%;
+        background: linear-gradient(90deg, transparent, var(--accent), transparent);
         transition: left 0.6s ease;
     }
-
     .feature-card:hover::before{
         left: 100%;
     }
-
     .feature-card:hover{
-        transform: translateY(-10px) scale(1.02);
-        box-shadow: 0 20px 60px rgba(102, 126, 234,0.2);
-        border-color: rgba(102, 126, 234,0.3);
+        transform: translateY(-10px) scale(1.03);
+        box-shadow: 0 20px 60px rgba(237,109,32,0.13);
+        border-color: var(--primary);
     }
-
     .card-icon{
         width: 60px;
         height: 60px;
-        background: linear-gradient(135deg, #667eea, #764ba2);
+        background: linear-gradient(135deg, var(--primary), var(--secondary));
         border-radius: 15px;
         display: flex;
         align-items: center;
         justify-content: center;
         font-size: 1.5rem;
-        color: white;
+        color: #fff;
         margin-bottom: 1.5rem;
         position: relative;
         z-index: 2;
+        box-shadow: 0 2px 8px rgba(237,109,32,0.10);
     }
-    
     .feature-card h2{
         font-size: 1.5rem;
-        font-weight: 600;
+        font-weight: 700;
         margin-bottom: 1rem;
-        color: #2d3748;
+        color: var(--primary);
         position: relative;
         z-index: 2;
     }
-
     .feature-card p{
-        color: #718096;
-        line-height: 1.2;
+        color: var(--secondary-text);
+        line-height: 1.4;
         position: relative;
         z-index: 2;
     }
-
     .section-title{
         text-align: center;
         font-size: 2.5rem;
-        font-weight: 700;
-        color: #2d3748;
+        font-weight: 800;
+        color: var(--primary);
         margin-bottom: 0 auto;
+        letter-spacing: -0.01em;
     }
-
     .section-subtitle{
         text-align: center;
         font-size: 1.25rem;
-        color: #718096;
+        color: var(--primary-text);
         max-width: 600px;
         margin: 0 auto;
     }
-
     .fade-in{
         opacity: 1;
         transform: translateY(0);
         transition: all 0.6s ease;
     }
+    @media (max-width: 900px) {
+        .hero-content {
+            flex-direction: column;
+            gap: 2rem;
+        }
+        .hero-card {
+            max-width: 100%;
+            padding: 1.5rem 1rem;
+        }
+    }
 </style>
-
 <div class="bg-animation"></div>
 <section class="hero">
     <div class="hero-content">
-        <div class="hero-text">
+        <div class="hero-card">
             <h1>ATLAS</h1>
-            <p> Unlock the power of advanced data processing with our comprehensive platform designed to suite all of your analytical needs and scale with your business.</p>
+            <p>Unlock the power of advanced data processing with our comprehensive platform designed to suite all of your analytical needs and scale with your business.</p>
             <a href="getting-started/introduction" class="cta-button"><span>Get Started</span><span style="font-size: 1.2rem;">→</span></a>
-        </div>
-        <div class="hero-image">
-            <div class="floating-card">
-                <span style="position: relative; z-index: 3;"><img src="assets/swoosh/hpc.png"/></span>
-            </div>
         </div>
     </div>
 </section>
 <section class="cards-section">
     <div class="fade-in">
-        <h2 class="section-title">Everything your need</h2>
+        <h2 class="section-title">Everything you need</h2>
         <p class="section-subtitle">Discover tools and resources to accelerate your data processing journey.</p>
     </div>
     <div class="cards-container">
@@ -300,21 +264,19 @@
             </h2>
             <p>Jump right in with our getting started guide. Learn about the fundamentals and get your first workbook up and running in minutes.</p>
         </a>
-
         <a href="developer-resources/" class="feature-card fade-in">
-            <div class="card-icon">🚀</div>
+            <div class="card-icon">💡</div>
             <h2>
                 Developer Resources
             </h2>
-            <p>Jump right in with our getting started guide. Learn about the fundamentals and get your first workbook up and running in minutes.</p>
+            <p>Access APIs, SDKs, and documentation to build and extend ATLAS for your needs.</p>
         </a>
-
-        <a href="extending-atlas/" class="feature-card fade-in">
-            <div class="card-icon">🚀</div>
+        <a href="extending-atlas/secu4/open_streaming_architecture/" class="feature-card fade-in">
+            <div class="card-icon">🧩</div>
             <h2>
                 Extend ATLAS
             </h2>
-            <p>Jump right in with our getting started guide. Learn about the fundamentals and get your first workbook up and running in minutes.</p>
+            <p>Integrate with third-party tools and discover how to customize ATLAS for your workflows.</p>
         </a>
     </div>
 </section>
