--- a/overrides/home.html
+++ b/overrides/home.html
@@ -271,7 +271,9 @@
             </h2>
             <p>Access APIs, SDKs, and documentation to build and extend ATLAS for your needs.</p>
         </a>
-        <a href="extending-atlas/api-overview/" class="feature-card fade-in">
+
+
+        <a href="extending-atlas/apis/" class="feature-card fade-in">
             <div class="card-icon">🧩</div>
             <h2>
                 Extend ATLAS
