Adding instructions from the SQLRace Setup Guide

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -9,7 +9,7 @@
         --primary-text: #303437;
         --secondary-text: #B1B3B3;
         --secondary: #148E8E;
-        --accent: #8FE5A6;
+        --accent: #F4F4F4;
     }
     *{
         margin:0;
