--- a/overrides/redoc.html
+++ b/overrides/redoc.html
@@ -21,7 +21,7 @@
     
   <main id="redoc-container"></main>
 
-  <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script>
+  <script src="https://unpkg.com/redoc@latest/bundles/redoc.standalone.js"> </script>
 
   <script>
     Redoc.init('api.yaml', {
